[package]
name = "review-kun"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.29.0", features = ["event-stream"] }
octocrab = "0.44.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
